Closed
Bug 27151
Opened 26 years ago
Closed 26 years ago
Fieldset with PCDATA and LEGEND does not display the PCDATA
Categories
(Core :: Layout: Form Controls, defect, P3)
Core
Layout: Form Controls
Tracking
()
VERIFIED
FIXED
M15
People
(Reporter: christinehoff4, Assigned: rods)
Details
Attachments
(1 file)
|
281 bytes,
text/html
|
Details |
Tested on Windows, Mac and Linux using 2/9 build.
Steps to reproduce:
1. Open attached file
2. There is a Fieldset with PCDATA and a LEGEND.
Expected result:
Text in Fieldset should display when a LEGEND follows.
Actual result:
Text in Fieldset does not display when a LEGEND follows.
In the HTML 4.01 spec:
http://www.w3.org/TR/html4/interact/forms.html#edef-FIELDSET
the DTD says that with FIELDSET, both #PCDATA and LEGEND occur, in that order.
Therefore, if you have a FIELDSET start tag, text, start and end LEGEND tags,
and FIELDSET end tag - the text should display. Text displays if there is no
legend.
| Reporter | ||
Comment 1•26 years ago
|
||
| Reporter | ||
Updated•26 years ago
|
QA Contact: ckritzer → chrisd
| Assignee | ||
Comment 4•26 years ago
|
||
The problem was in nsCSSFrameConstructor, the "previous" frame wasn't being set
correctly.
Summary: Fieldset with PCDATA and LEGEND does not display the PCDATA → [FIX]Fieldset with PCDATA and LEGEND does not display the PCDATA
Whiteboard: fix in tree, waiting to check in
| Assignee | ||
Comment 5•26 years ago
|
||
fixed.
Summary: [FIX]Fieldset with PCDATA and LEGEND does not display the PCDATA → Fieldset with PCDATA and LEGEND does not display the PCDATA
Whiteboard: fix in tree, waiting to check in
| Assignee | ||
Comment 6•26 years ago
|
||
forgot to set it to fixed
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•