the previous var wasn't being set so it went down the wrong code path when adjusting the child list for creating the fieldset. b=27151 r=kmcclusk